Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/6994946/SemanticErrorTest.1.out
SemanticErrorTest.java:13:46: compiler.err.repeated.interface
1 error
